post component separated

--- a/FBv1/frontend/facebook/src/app/homepage/homepage.component.html
+++ b/FBv1/frontend/facebook/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <p>homepage works!</p>
-
+<app-post></app-post>
 <!-- 
 <form>
     <div class="form-group">
@@ -10,13 +10,3 @@
 
     <button type="submit" class="btn btn-primary" (click)="submitpost()">Post</button>
 </form> -->
-
-<body>
-    <div class="container">
-        <div class="form-group">
-            <textarea class="form-control" rows="5" [(ngModel)]="newpost.content" [ngModelOptions]="{standalone: true}"></textarea>
-        </div>
-
-        <button type="submit" class="btn btn-primary" (click)="submitpost()">Create Post</button>
-    </div>
-</body>
