--- a/FBv1/frontend/facebook/src/app/homepage/homepage.component.html
+++ b/FBv1/frontend/facebook/src/app/homepage/homepage.component.html
@@ -1,12 +1,16 @@
 <p>homepage works!</p>
 <app-post></app-post>
-<!-- 
-<form>
-    <div class="form-group">
-        <div class="form-outline">
-            <textarea class="form-control" id="textAreaExample1" rows="4" [(ngModel)]="newpost.content" [ngModelOptions]="{standalone: true}"></textarea>
+<p>all the posts here </p>
+
+
+<div class="container">
+    <div class="row">
+        <div class=" card col-12" style="width: 300px; ">
+            <div class="card-body ">
+                <h5 class="card-title ">Eiffel Tower</h5>
+                <!-- <h6 class="card-subtitle mb-3 text-muted ">Champ de Mars, Paris, France</h6> -->
+                <p class="card-text ">Built in 1889 Eiffel Tower is one of the most iconic landmarks in the world.</p>
+            </div>
         </div>
     </div>
-
-    <button type="submit" class="btn btn-primary" (click)="submitpost()">Post</button>
-</form> -->
+</div>
