--- a/FBv1/frontend/facebook/src/app/homepage/homepage.component.html
+++ b/FBv1/frontend/facebook/src/app/homepage/homepage.component.html
@@ -6,6 +6,9 @@
         <button class="btn btn-danger" type="submit" (click)="logout()">Logout</button>
     </form>
 </nav>
+<!-- <h1>hey</h1> -->
+<app-story></app-story>
+
 <app-post></app-post>
 
 
