--- a/FBv1/frontend/facebook/src/app/homepage/homepage.component.html
+++ b/FBv1/frontend/facebook/src/app/homepage/homepage.component.html
@@ -7,7 +7,18 @@
     </form>
 </nav>
 <!-- <h1>hey</h1> -->
-<app-story></app-story>
+<!-- <div style="width: 50rem; ">
+    <app-story></app-story>
+
+</div> -->
+
+<div class="container " >
+    <div class="row ">
+        <div class=" col-12 " style="width: 300px; ">
+           <app-story></app-story>
+        </div>
+    </div>
+</div>
 <hr>
 <app-post></app-post>
 
