--- a/FBv1/frontend/facebook/src/app/story/story.component.css
+++ b/FBv1/frontend/facebook/src/app/story/story.component.css
@@ -5,8 +5,8 @@
 }
 
 .stories{
-    margin-left: 25%;
-    width: 50rem;
+    margin-left: 15%;
+    width: 100rem;
     height: 15rem;
     overflow-x: auto;
     /* display:inline-flex; */
@@ -33,7 +33,7 @@
     margin-right: 13px;
     width: 7.5rem; 
     height: 12rem; 
-    background-color: #3b5998;
+    background-color: red;
     -webkit-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.25); 
     box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.25);
 }
@@ -41,9 +41,9 @@
 .mine{
     margin-top: 10px;
     margin-right: 20px;
-    width: 7.5rem; 
+    width: 10.5rem; 
     height: 12rem; 
-    background-color: #3b5998;
+    background-color: green;
     -webkit-box-shadow: inset 0px 0px 3px 0px #FFFFFF; 
     box-shadow: inset 0px 0px 3px 0px #FFFFFF;
 }
@@ -209,19 +209,24 @@ h2{
     float: left;
 }
 
-
+.full{
+    width: 100%;
+}
 #storyUpload{
     display: block;
     visibility: hidden;
     height: 0;
     width: 0;
 }
-
+.pura{
+    display: flex;
+    width: 20rem;
+}
 
 /*Scrollbar custommize*/
-.stories{
+.stories:required{
     scrollbar-color: #D4AA70 #e4e4e4;
-    width: 100%;
+    /* background-color: purple; */
 }
 
 .stories::-webkit-scrollbar {
@@ -251,11 +256,11 @@ h2{
     width:90%;
 }
 
-.stories{
+/* .stories{
     display: inline-flex;
     width: 60rem;
     margin-left: 20px;
-}
+} */
 
 .showpost{
     margin: 40px;
