--- a/FBv1/frontend/facebook/src/app/story/story.component.html
+++ b/FBv1/frontend/facebook/src/app/story/story.component.html
@@ -1,6 +1,3 @@
-<!-- <p>story works!</p> -->
-<!-- Story show -->
-<!-- <button (click)="check()"> hey</button> -->
 <div class="stories">
 
     <div class="card bg-dark text-white mine">
@@ -10,16 +7,17 @@
             <h5 class="card-title" style="color:#828ea8;">Add Story</h5>
         </button>
     </div>
+    <div class="pura">
+        <div *ngFor="let story of fetchedStories">
+            <div class="card bg-dark text-white others" *ngIf="story.name!=this.currentUserId">
+                <img src={{story.storyUUID}} class="card-img" alt="...">
+                <div class="card-img-overlay grad">
+                    <h6 class="card-title" style="margin-top:8.5rem;">{{story.name}}</h6>
+                    <!-- <h6 class="card-title" style="margin-top:8.5rem;">{{story.time}}</h6> -->
 
-    
-    <div *ngFor="let story of fetchedStories">
-        <div class="card bg-dark text-white others" *ngIf="story.name!=this.currentUserId">
-            <img src={{story.storyUUID}} class="card-img" alt="...">
-            <div class="card-img-overlay grad">
-                <h6 class="card-title" style="margin-top:8.5rem;">{{story.name}}</h6>
+                </div>
             </div>
         </div>
     </div>
 
-    
 </div>
