--- a/MiniFb/frontend/facebook/src/app/login/login.component.html
+++ b/MiniFb/frontend/facebook/src/app/login/login.component.html
@@ -17,8 +17,8 @@
                     <div></div>
                 </div>
                 <form [formGroup]="angForm" class='input-group-register' (ngSubmit)="postdata1(angForm)" autocomplete="off">
-                    <input type='text' class='input-field' placeholder='User ID ' name="userid" formControlName="userid" autocomplete="off" required>
-                    <input type='password' class='input-field' placeholder='Enter Password' name="password" formControlName="password" autocomplete="off" required>
+                    <input type='email' class='input-field' placeholder='Email ID' name="email" formControlName="email" autocomplete="off" required>
+                    <input type='password' class='input-field' placeholder='Password' name="password" formControlName="password" autocomplete="off" required>
                     <br><br><br>
                     <button type='submit' class='submit-btn'>Login</button>
                 </form>
