--- a/MiniFb/frontend/facebook/src/app/signup/signup.component.html
+++ b/MiniFb/frontend/facebook/src/app/signup/signup.component.html
@@ -16,9 +16,9 @@
                 </div>
                 <form [formGroup]="angForm" class='input-group-register' (ngSubmit)="postdata(angForm)" autocomplete="off">
                     <input type='text' class='input-field' placeholder='First Name' name="name" formControlName="name" autocomplete="off" required>
-                    <input type='text' class='input-field' placeholder='User ID ' name="userid" formControlName="userid" autocomplete="off" required>
+                    <!-- <input type='text' class='input-field' placeholder='User ID ' name="userid" formControlName="userid" autocomplete="off" required> -->
                     <input type='email' class='input-field' placeholder='Email Id' name="email" formControlName="email" autocomplete="off" required>
-                    <input type='text' class='input-field' placeholder='Phone' name="phone" formControlName="phone" autocomplete="off" required>
+                    <!-- <input type='text' class='input-field' placeholder='Phone' name="phone" formControlName="phone" autocomplete="off" required> -->
                     <input type='password' class='input-field' placeholder='Enter Password' name="password" formControlName="password" autocomplete="off" required>
                     <br><br><br>
                     <button type='submit' class='submit-btn'>Register</button>
