--- a/MiniFb/frontend/facebook/src/app/story/story.component.html
+++ b/MiniFb/frontend/facebook/src/app/story/story.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="pura">
         <div *ngFor="let story of fetchedStories">
-            <div class="card bg-dark text-white others" *ngIf="story.name!=this.currentUserId">
+            <div class="card bg-dark text-white others" *ngIf="story.name!=this.currentUserName">
                 <img src={{story.storyUUID}} class="card-img" alt="...">
                 <div class="card-img-overlay grad">
                     <h6 class="card-title" style="margin-top:8.5rem;">{{story.name}}</h6>
@@ -19,5 +19,4 @@
             </div>
         </div>
     </div>
-
 </div>
